[package]
name = "mandelbrot_set"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
opengl-renderer = {git="https://github.com/ColemanSandefur/OpenGL-Renderer-Rust", rev="4d84a0d"}
egui = { version = "0.20.1", default-features = false, features = [
  "bytemuck",
] }
glium = "0.32"
nalgebra="0.32.1"
